# urdf2casadi

./: .gitignore  LICENSE  README.md  converter.py  numpy_geom.py  pantilt.urdf  pyproject.toml  requirements.txt  rnea-u2c.ipynb  setup.py  test.ipynb
.github/workflows/: unitTest.yml
article_results/kinematics/: thrivaldi_urdf_example.ipynb
article_results/timing/: jit_tmp.c
article_results/urdf/: 2dof_modified.urdf  gantry.urdf  pr2.urdf  supertest.urdf  test.urdf  thrivaldi.urdf
article_results/user/: ur5_example.ipynb
examples/: UR5_urdf_example.ipynb  geometry_examples.ipynb
examples/kinematics/: UR5_urdf_example.ipynb  geometry_examples.ipynb  thrivaldi_urdf_example.ipynb
examples/numerical/: README.md  Untitled.ipynb  coriolis_gantry.py  coriolis_kuka.py  coriolis_ur5.py  forward_dynamics_ABA_gantry.py  forward_dynamics_ABA_ur5.py  forward_dynamics_gantry.py  forward_dynamics_ur5.py  gravity_gantry.py  gravity_ur5.py  inertia_matrix_gantry.py  inertia_matrix_ur5.py  inverse_dynamics_gantry.py  inverse_dynamics_ur5.py  jit_tmp.c
examples/timing/: 16dof.urdf  17dof.urdf  18dof.urdf  20dof.urdf  21dof.urdf  22dof.urdf  23dof.urdf  24dof.urdf  25dof.urdf  26dof.urdf  27dof.urdf  28dof.urdf  29dof.urdf  30dof.urdf  31dof.urdf  32dof.urdf  6dof.urdf  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  get_nodes.ipynb  graphs.ipynb  id_num_pb.ipynb  jit_tmp.c  pendulum_data.ipynb  pendulum_new.ipynb  pybullet_meshes.ipynb  snake_data.ipynb  snake_new.ipynb  timing_coriolis.ipynb  (+14 more)
urdf2casadi/: casadi_geom.py  converter.py  numpy_geom.py  urdfparser.py
(+221 files in other folders)
